# ghg-methodology-calculator

./: .env.example  .gitignore  BUILD-FIRST-APP.md  HOW-TO-WORK.md  PLAN.md  PORTABLE-VS-PROJECT.md  README.md  pyproject.toml
.cursor/rules/: api-versioning.mdc  avoid-premature-optimization.mdc  clean-code.mdc  command-query-separation.mdc  composition-and-coupling.mdc  cursor-agentic.mdc  domain-driven-design.mdc  dry.mdc  encapsulation.mdc  error-handling.mdc  explicit-and-immutability.mdc  general-software-engineering.mdc  inclusive-language.mdc  kiss.mdc  least-astonishment.mdc  logging-observability.mdc  persistence-best-practices.mdc  refactoring.mdc  security-awareness.mdc  separation-of-concerns.mdc  single-source-of-truth.mdc  solid-principles.mdc  task-and-sprint-conventions.mdc  test-first-and-coverage.mdc  vibe-coding.mdc  yagni.mdc
.github/workflows/: ci.yml
agents/: AGENT-RUNBOOK.md  README.md
agents/estimation/: ESTIMATION-PROMPT.md  HISTORICAL-CONTEXT-TEMPLATE.md
agents/prompts/: MODULE-BOUNDARIES-PROMPTS.md  SPEC-DRAFTING-PROMPT.md  SPEC-TO-YAML-PROMPT.md
app/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: README.md
framework/: README.md
ghg_methodology_calculator/: __init__.py  cli.py
ghg_methodology_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
specs/: PRE-DEVELOPMENT-CHECKLIST.md  README.md  assumptions-and-open-questions.md  sprints.yaml  tasks.yaml
tests/: __init__.py  test_calculator.py  test_india_ghci.py  test_korea_clean_h2.py  test_models.py
(+47 files in other folders)
