[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghg-methodology-calculator"
version = "0.1.0"
description = "Verification-ready lifecycle GHG intensity calculator for Hydrogen / PtX (India GHCI, Korea Clean H2, etc.)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["GHG", "hydrogen", "PtX", "lifecycle", "LCA", "emissions", "certification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
ghg-calc = "ghg_methodology_calculator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghg_methodology_calculator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["ghg_methodology_calculator"]
branch = true

[tool.coverage.report]
show_missing = true
